# diathek

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: style.yml  tests.yml
deploy/: diathek-deploy.sh
scripts/: upload.py
src/: manage.py
src/diathek/: settings.py  urls.py  wsgi.py
src/diathek/common/settings/: test_settings.py
src/diathek/core/: admin.py  apps.py  context_processors.py  forms.py  immich.py  immich_export.py  metadata.py  tasks.py  thumbnails.py  urls.py  views.py
src/diathek/core/api/: auth.py  pagination.py  serializers.py  urls.py  views.py
src/diathek/core/management/commands/: prune_immich_edit_sessions.py
src/diathek/core/migrations/: 0001_initial.py  0002_box_place_image_driverstate_collection_auditlog_and_more.py  0003_driverstate_singleton.py  0004_user_can_upload.py  0005_delete_collection.py  0006_box_immich_album_url_box_immich_error_and_more.py  0007_image_latitude_image_longitude.py  0008_user_api_token.py  0009_image_immich_capture_datetime.py  0010_immicheditsession.py
src/diathek/core/models/: __init__.py  auditlog.py  base.py  box.py  collection.py  driver.py  image.py  immich_edit.py  invite.py  place.py  user.py
src/diathek/core/static/core/: batch_select.js  diathek.css  immich_edit.js  metadata_inputs.js  upload.js
src/diathek/core/templates/core/: _batch_bar.html  _date_input.html  _deploying.html  _image_metadata.html  _image_tile.html  _immich_status.html  _place_input.html  _place_row.html  account_settings.html  base.html  box_archive.html  box_edit.html  collection_detail.html  collection_edit.html  collection_list.html  detail.html  gallery.html  grid.html  immich_edit.html  import.html  index.html  login.html  place_list.html  register.html  register_invalid.html  unsorted.html
src/diathek/metadata/: coords.py  dateparse.py  description.py  immich_edit.py  immich_exif.py  immich_import.py
src/tests/: conftest.py  helpers.py  test_immich_client.py  test_immich_export.py  test_tasks.py  test_thumbnails.py
src/tests/admin/: test_admin.py
src/tests/commands/: test_prune_immich_edit_sessions.py
src/tests/core/: test_metadata_parser.py
src/tests/factories/: __init__.py  core.py
src/tests/metadata/: test_coords.py  test_dateparse.py  test_description.py  test_immich_edit.py  test_immich_exif.py  test_immich_import.py
src/tests/models/: test_auditlog.py  test_base.py  test_box.py  test_collection.py  test_driver.py  test_image.py  test_image_assignment.py  test_invite.py  test_place.py  test_user.py
src/tests/views/: test_account_settings.py  test_api.py  test_api_upload.py  test_box_archive.py  test_box_batch.py  test_box_download.py  test_box_edit.py  test_box_immich.py  test_collections.py  test_date_autocomplete.py  test_deploy.py  test_detail.py  test_driver_state.py  test_gallery.py  test_grid.py  test_image_batch.py  test_image_immich.py  test_immich_edit.py  test_import.py  test_index.py  test_place_autocomplete.py  test_places.py  test_register.py  test_state.py  test_unsorted.py
